2006-11-03  Petr Mikulik  <mikulik@physics.muni.cz>

	* VERSION PATCHLEVEL src/version.c: Declare this version as 4.3 pl 0.

2006-11-01  Ethan Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc: Add an entry key for "help file", because otherwise
	this takes you to a section on avs binary format (confusing).

2006-10-29  Ethan Merritt  <merritt@u.washington.edu>

	* src/gadgets.h src/tables.h src/tables.c: Add font to key structure.

	* src/set.c (set_key set_keytitle) src/save.c src/show.c
	src/graphics.c (do_plot do_key_sample) docs/gnuplot.doc:
	    set key {font "<face>,<size>"}

	Add explicit font to be used for key title and key entries.  If you use
	a font that is very different from the default, you may have to adjust
	the line spacing of the key entries.  For example:
	    set key font "Times,18" spacing 1.5

2006-10-28  Ethan Merritt  <merritt@u.washington.edu>

	* src/show.c (show_ticdef) src/save.c (save_tics): Handle textcolor of
	tic labels correctly for cases other than a pure linetype (TC_LT).
	Bug #1586427

2006-10-26  Hans-Bernhard Broeker  <broeker@physik.rwth-achen.de>

	* src/graphics.c (place_rectangles): Fix missing brace in
	yesterday's change.

2006-10-25  Ethan Merritt  <merritt@u.washington.edu>

	* src/graphics.c (place_rectangles do_plot) src/graph3d.c (do_3dplot)
	src/graphics.h: Allow placement of rectangles in 3D (splot) regardless
	of view angle, but only if the rectangle position is given in screen
	coords. Placement in 2D and 3D "set view map" is unchanged.

2006-10-22  Hans-Bernhard Broeker  <broeker@physik.rwth-achen.de>

	* src/graphics.c (plot_image_or_update_axes): Operator | is
	forbidden on real C99 booleans.  Use || instead.

	* src/datafile.c (df_readbinary): Operator | is forbidden on real
	C99 booleans.  Use || instead.

	* src/axis.c (setup_tics): Operator & is forbidden on real C99
	booleans.  Use && instead.

	* config/makefile.oww (WCFLAGS): Add -za99 to enable _Bool type in
	recent versions of OpenWatcom.